--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.9",
+    "lucide-react": "^0.381.0",
+    "millify": "^6.1.0",
+    "next": "14.2.3",
+    "next-themes": "^0.3.0",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-horizontal-scrolling-menu": "^7.1.0",
+    "react-icons": "^5.2.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
