--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,17 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.9",
     "lucide-react": "^0.381.0",
     "millify": "^6.1.0",
+    "mongoose": "^8.4.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
