--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -6,8 +6,12 @@ services:
     ports: 
       - 6379:6379
     volumes:
-      - redis_data_a:/data
+      - data:/data
     entrypoint: redis-server --appendonly yes
 
 volumes:
-  redis_data_a:
+  data:
+
+networks:
+  default:
+    name: scrape_scheduler_network
