--- a/scrapping/selenium_project/Dockerfile
+++ b/scrapping/selenium_project/Dockerfile
@@ -6,21 +6,15 @@ COPY . /app
 
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
-# Install dependencies and Google Chrome
-RUN apt-get update && \
-    apt-get install -y wget gnupg unzip && \
-    wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
-    sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list' && \
-    wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
-    apt-get update && \
-    apt install -y ./google-chrome-stable_current_amd64.deb && \
-    rm google-chrome-stable_current_amd64.deb && \
-    apt-get clean
+# install google chrome
+RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+    RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
+    RUN apt-get -y update
+    
+    # install chromedriver
+    RUN apt-get install -yqq unzip
+    RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
+    RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
+    
 
-# RUN apt-get update && apt-get install -y wget unzip && \
-#     wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
-#     apt install -y ./google-chrome-stable_current_amd64.deb && \
-#     rm google-chrome-stable_current_amd64.deb && \
-#     apt-get clean
-
-CMD ['python' 'apartmentsone.py']
+CMD ['python3' 'apartmentsone.py']
