--- a/scrapping/selenium_project/Dockerfile
+++ b/scrapping/selenium_project/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10
+FROM python:3.12-alpine
 
 WORKDIR /app
 
@@ -7,14 +7,21 @@ COPY . /app
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 # install google chrome
-RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
-    RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
-    RUN apt-get -y update
+# RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+#     RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
+#     RUN apt-get -y update
     
-    # install chromedriver
-    RUN apt-get install -yqq unzip
-    RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
-    RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
+#     # install chromedriver
+#     RUN apt-get install -yqq unzip
+#     RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
+#     RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
     
 
-CMD ['python3' 'apartmentsone.py']
+# # install Google Chrome
+# RUN apt-get update && apt-get install -y wget unzip && \
+#     wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
+#     apt install -y ./google-chrome-stable_current_amd64.deb && \
+#     rm google-chrome-stable_current_amd64.deb && \
+#     apt-get clean
+
+CMD ['python' 'main.py']
