--- a/scrapping/selenium_project/requirements.txt
+++ b/scrapping/selenium_project/requirements.txt
@@ -1,63 +1,49 @@
-appdirs==1.4.4
+amqp==5.2.0
+asgiref==3.8.1
 attrs==23.2.0
-Automat==22.10.0
 beautifulsoup4==4.12.3
-bs4==0.0.2
+billiard==4.2.0
+celery==5.4.0
 certifi==2024.6.2
-cffi==1.16.0
 charset-normalizer==3.3.2
-constantly==23.10.4
-cryptography==42.0.8
-cssselect==1.2.0
-defusedxml==0.7.1
-fake-useragent==1.5.1
-filelock==3.14.0
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cron-descriptor==1.4.3
+decouple==0.0.7
+Django==5.0.6
+django-celery-beat==2.6.0
+django-celery-results==2.5.1
+django-cors-headers==4.3.1
+django-timezone-field==6.1.0
+djangorestframework==3.15.1
+gunicorn==22.0.0
 h11==0.14.0
-hyperlink==21.0.0
 idna==3.7
-importlib_metadata==7.1.0
-incremental==22.10.0
-itemadapter==0.9.0
-itemloaders==1.3.1
-jmespath==1.0.1
+kombu==5.3.7
 lxml==5.2.2
-lxml_html_clean==0.1.1
 outcome==1.3.0.post0
-packaging==24.0
-parse==1.20.1
-parsel==1.9.1
-Protego==0.3.1
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.22
-PyDispatcher==2.0.7
-pyee==11.1.0
-pyOpenSSL==24.1.0
-pyppeteer==2.0.0
-pyquery==2.0.0
+packaging==24.1
+prompt_toolkit==3.0.46
 PySocks==1.7.1
+python-crontab==3.1.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-queuelib==1.7.0
+redis==5.0.5
 requests==2.32.3
-requests-file==2.1.0
-requests-html==0.10.0
 selenium==4.21.0
-service-identity==24.1.0
-setuptools==70.0.0
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
-tldextract==5.1.2
-tqdm==4.66.4
+sqlparse==0.5.0
 trio==0.25.1
 trio-websocket==0.11.1
-Twisted==24.3.0
 typing_extensions==4.12.1
-urllib3==1.26.18
-w3lib==2.2.0
+tzdata==2024.1
+urllib3==2.2.1
+vine==5.1.0
+wcwidth==0.2.13
 webdriver-manager==4.0.1
-websockets==10.4
 wsproto==1.2.0
-zipp==3.19.2
-zope.interface==6.4.post2
