--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@auth/mongodb-adapter": "^3.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@nextui-org/react": "^2.4.2",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "antd": "^5.18.3",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "framer-motion": "^11.2.9",
     "lucide-react": "^0.381.0",
     "millify": "^6.1.0",
@@ -35,6 +39,7 @@
     "react-horizontal-scrolling-menu": "^7.1.0",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "sharp": "^0.33.4",
     "stripe": "^15.9.0",
     "tailwind-merge": "^2.3.0",
