--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^11.2.9",
     "lucide-react": "^0.381.0",
     "millify": "^6.1.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
