--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,6 @@
+aiohttp==3.9.5
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
 amqp==5.2.0
 asgiref==3.8.1
 attrs==23.2.0
@@ -11,6 +14,7 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 cron-descriptor==1.4.3
+decorator==5.1.1
 decouple==0.0.7
 Django==5.0.6
 django-celery-beat==2.6.0
@@ -18,13 +22,18 @@ django-celery-results==2.5.1
 django-cors-headers==4.3.1
 django-timezone-field==6.1.0
 djangorestframework==3.15.1
+frozenlist==1.4.1
 gunicorn==22.0.0
 h11==0.14.0
 idna==3.7
 kombu==5.3.7
+lxml==4.9.4
+multidict==6.0.5
 outcome==1.3.0.post0
 packaging==24.1
+plivo==4.55.1
 prompt_toolkit==3.0.46
+PyJWT==2.8.0
 PySocks==1.7.1
 python-crontab==3.1.0
 python-dateutil==2.9.0.post0
@@ -46,3 +55,4 @@ vine==5.1.0
 wcwidth==0.2.13
 webdriver-manager==4.0.1
 wsproto==1.2.0
+yarl==1.9.4
