production nginx config

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
         listen 80;
-        server_name localhost;
+        server_name www.apttracking.com apttracking.com;
 
         location / {
             proxy_pass http://nextjs:3000;
