--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "react": "^18",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
