--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "sharp": "^0.33.4",
