--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "react": "^18",
+    "react-calendar": "^5.1.0",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
