using backend localhost

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     volumes:
       - ./frontend:/frontend
     env_file:
-      - ./frontend/.env.local
+      - ./frontend/.env
     ports:
       - "3000:3000"
     networks:
