--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,19 @@
 # Use an official Python runtime as a parent image
 FROM python:3.13.1
 
-# Set the working directory in the container
 WORKDIR /backend
 ENV PYTHONUNBUFFERED 1
 
-# Copy the dependencies file to the working directory
+# Install dependencies
 COPY ./requirements.txt .
-#Upgrade pip
 RUN pip install --upgrade pip
-# Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application code to the working directory
+# Copy application code
 COPY . .
+
+# Generate a self-signed SSL certificate inside the container
+RUN openssl req -x509 -newkey rsa:4096 -keyout /backend/key.pem -out /backend/cert.pem -days 365 -nodes -subj "/CN=localhost"
 
 # Collect static files
 RUN python manage.py collectstatic --noinput
@@ -21,8 +21,5 @@ RUN python manage.py collectstatic --noinput
 # Expose the application port
 EXPOSE 8000
 
-# Start the application
-# CMD ["gunicorn", "project.wsgi:application", "--bind", "0.0.0.0:8000"]
-
-# # Run Django server
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Start Django with SSL
+CMD ["gunicorn", "project.wsgi:application", "--certfile", "/backend/cert.pem", "--keyfile", "/backend/key.pem", "--bind", "0.0.0.0:8000"]
