--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,19 +1,37 @@
-upstream frontend {
-    server frontend:3000;
+# nginx/default.conf
+server {
+    listen 80;
+    server_name nuviane.com www.nuviane.com;
+    # Redirect all HTTP requests to HTTPS
+    return 301 https://$host$request_uri;
 }
 
 server {
-    listen 80;
+    listen 443 ssl;
+    server_name nuviane.com www.nuviane.com;
+
+    # SSL certificates
+    ssl_certificate /etc/letsencrypt/live/nuviane.com/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/nuviane.com/privkey.pem;
+
+    # SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
 
     location / {
-        proxy_pass http://frontend;
+        proxy_pass http://frontend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+    location /drf-api/ {
+        proxy_pass http://backend:8000;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /static/ {
-        alias /static/;
     }
 }
