--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,8 @@ services:
     build: ./frontend/nginx
     volumes:
      - static:/static
+     - /etc/letsencrypt:/etc/letsencrypt:ro
+     - ./frontend/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
     depends_on:
