--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,9 +1,7 @@
-# nginx/default.conf
 server {
     listen 80;
     server_name nuviane.com www.nuviane.com;
-    # Redirect all HTTP requests to HTTPS
-    return 301 https://$host$request_uri;
+    return 301 https://nuviane.com$request_uri;
 }
 
 server {
@@ -25,6 +23,11 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+
+        # Add these headers
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
     }
     location /drf-api/ {
         proxy_pass http://backend:8000;
