--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "react-calendar": "^5.1.0",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
+    "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-toastify": "^10.0.5",
