--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,6 @@ services:
       - ./backend/.env
     ports:
       - "8000:8000"
-    depends_on:
-      - selenium
     networks:
       - realestatenetwork
     restart: on-failure
@@ -39,15 +37,15 @@ services:
       - backend
     restart: on-failure
 
-  selenium:
-    environment:
-      - VNC_NO_PASSWORD=1
-    image: selenium/standalone-chrome:117.0
-    ports:
-      - 7900:7900
-    networks:
-      - realestatenetwork
-    restart: on-failure
+  # selenium:
+  #   environment:
+  #     - VNC_NO_PASSWORD=1
+  #   image: selenium/standalone-chrome:117.0
+  #   ports:
+  #     - 7900:7900
+  #   networks:
+  #     - realestatenetwork
+  #   restart: on-failure
   mongo:
     image: mongo:8
     container_name: mongodb
