--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -2,45 +2,36 @@
 
 # dependencies
 /node_modules
-/frontend-ref
-*.cpython-312.pyc
 /.pnp
-.pnp.js
-.yarn/install-state.gz
-backend/project/__pycache__/
-backend/project/__pycache__
-node_modules/
-.next/
-
-# Ignore Python cache files
-__pycache__/
-*.pyc
-apttracking-files-admin.json
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
 # testing
 /coverage
-venv/
-.env*
+
 # next.js
 /.next/
 /out/
-*.pyc
-*.pyc
+
 # production
 /build
 
 # misc
 .DS_Store
-db.sqlite3
 *.pem
-migrations/
+
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# local env files
-.env*.local
+# env files (can opt-in for committing if needed)
+.env*
 
 # vercel
 .vercel
