--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,62 +3,60 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.3.7",
-    "@auth/mongodb-adapter": "^3.2.0",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@google-cloud/storage": "^7.14.0",
-    "@nextui-org/react": "^2.4.2",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@stripe/react-stripe-js": "^2.7.3",
-    "@stripe/stripe-js": "^4.1.0",
-    "antd": "^5.18.3",
-    "axios": "^1.7.2",
-    "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.7.0",
+    "@ant-design/icons": "^6.0.0",
+    "@auth/mongodb-adapter": "^3.9.0",
+    "@chakra-ui/react": "^3.16.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@google-cloud/storage": "^7.16.0",
+    "@nextui-org/react": "^2.6.11",
+    "@radix-ui/react-accordion": "^1.2.7",
+    "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.11",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-radio-group": "^1.3.3",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
+    "antd": "^5.24.8",
+    "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "file-saver": "^2.0.5",
-    "framer-motion": "^11.2.9",
-    "lucide-react": "^0.381.0",
+    "framer-motion": "^12.7.4",
+    "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
-    "mongodb": "^6.7.0",
-    "mongoose": "^8.4.0",
-    "next": "14.2.3",
-    "next-auth": "^4.24.7",
-    "next-themes": "^0.3.0",
-    "nodemailer": "^6.9.13",
-    "react": "^18",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.13.2",
+    "next": "15.3.1",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
+    "react": "^19.0.0",
     "react-calendar": "^5.1.0",
-    "react-datepicker": "^7.4.0",
-    "react-dom": "^18",
+    "react-datepicker": "^8.3.0",
+    "react-dom": "^19.0.0",
     "react-google-places-autocomplete": "^4.1.0",
-    "react-icons": "^5.2.1",
-    "react-markdown": "^9.0.1",
-    "react-toastify": "^10.0.5",
-    "recharts": "^2.12.7",
-    "sharp": "^0.33.4",
-    "stripe": "^15.12.0",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
+    "sharp": "^0.34.1",
+    "stripe": "^18.0.0",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.8",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4"
   }
 }
