--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.11",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-radio-group": "^1.3.3",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.2",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.2.0",
     "antd": "^5.24.8",
@@ -48,6 +48,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.1",
     "recharts": "^2.15.3",
     "sharp": "^0.34.1",
     "stripe": "^18.0.0",
