--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
-    "framer-motion": "^12.7.4",
+    "framer-motion": "^12.15.0",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
     "mongodb": "^6.16.0",
@@ -53,6 +53,7 @@
     "recharts": "^2.15.3",
     "sharp": "^0.34.1",
     "stripe": "^18.0.0",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.8",
     "xlsx": "^0.18.5"
