--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
     "recharts": "^2.15.3",
